Bug 92740 - IRC: Character encoding selection is ignored
Summary: IRC: Character encoding selection is ignored
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: IRC Plugin (other bugs)
Version First Reported In: SVN
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-11-05 13:17 UTC by Maik Zumstrull
Modified: 2006-03-20 18:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maik Zumstrull 2004-11-05 13:17:25 UTC
Version:            (using KDE KDE 3.3.1)
Installed from:    Unlisted Binary Package

I'm on an UTF-8 locale (de_DE.UTF-8).
I set the default character encoding for IRC connections to ISO-8859-15.
However, this only makes Kopete _send_ messages Latin9-Encoded;
all incoming messages are still interpreted as UTF-8.
Comment 1 Maik Zumstrull 2004-11-18 20:15:39 UTC
Appearantly, this problem is not limited to the IRC protocol handler.
I'm noticing the same behaviour with ICQ contacts using old clients.
Comment 2 Kay Patzwald 2004-12-12 18:52:42 UTC
I have the same problem when chatting with people using Trillian (Pro).
Comment 3 Jason Keirstead 2005-01-21 03:17:02 UTC
Can you re-try this bug using current HEAD and let me know if it still exists, in IRC?
Comment 4 Jason Keirstead 2005-01-22 03:53:42 UTC
CVS commit by brunes: 

Much better codec handling. This should take care of most encoding problems.

BUG:92740


  M +1 -1      ircaccount.cpp   1.128
  M +39 -21    ksparser.cpp   1.19
  M +2 -2      ksparser.h   1.10
  M +4 -4      libkirc/kircengine.cpp   1.13
  M +3 -2      libkirc/kircengine.h   1.17
  M +4 -1      libkirc/kircengine_commands.cpp   1.12
  M +2 -2      libkirc/kircentity.cpp   1.13
  M +21 -15    libkirc/kircmessage.cpp   1.32
  M +6 -5      libkirc/kircmessage.h   1.23



Comment 5 Will Stephenson 2005-03-20 18:24:21 UTC
Encoding of received messages appears to be broken in IRC again.  

To reproduce:
Join a utf-8 channel with Kopete, and two other clients  
From another client in utf-8 mode (I used Konversation and xchat in #kopete), send some text with umlauts in it (I used Filthï Bölls)

Observe what kopete displays.  Jason, can you check this?
Comment 6 clcevboxvjeo 2005-06-17 14:28:53 UTC
*** This bug has been confirmed by popular vote. ***
Comment 7 clcevboxvjeo 2005-06-17 14:41:51 UTC
I can confirm that. Actually I wanted to post my own bug report but I found this one.

Using KDE 3.4.1 and it happens there too. Outgoing messages sent with IRC are sent correctly with set encoding. But incoming messages are displayed in some default (UTF-8?) encoding. Please, someone look at it.

Next one thing: In chat window menu - IRC - Encoding doesn't reflect currently set encoding when changed from the menu.
Comment 8 Tommi Rantala 2005-06-17 14:47:43 UTC
Comment to #7:

> In chat window menu - IRC - Encoding doesn't reflect currently set encoding when changed from the menu. 

This has been fixed in trunk & backported to 3.4 branch.
Comment 9 growler 2005-08-13 16:41:10 UTC
Problem still exists with both IRC and ICQ protocols (0.10.2/KDE 3.4.1)
Comment 10 Johan Svensson 2005-09-11 01:46:52 UTC
I can confirm this bug. This is my setup:

Kopete 0.10.2
Preferred IRC character coding: ISO 8859-1
Basic system character coding: UTF-8

I have configured my IRC account to use ISO 8859-1 for codec. People can see my characters perfectly well, but things they write to me is decoded as UTF-8, overriding my settings.
Comment 11 Will Stephenson 2006-03-20 18:13:47 UTC
Fixed for KDE 3.5.2 - I hope.  The contact specific encoding setting is not persistent but it does work when set now.