Much better codec handling. This should take care of most encoding problems.

BUG:92740

svn path=/trunk/kdenetwork/kopete/; revision=381102